manifests/base/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-middleware
  namespace: notification-canada-ca
spec:
  redirectScheme:
    scheme: https

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: notification-canada-ca
spec:
  headers:
    # CORS
    accessControlAllowMethods: ["GET", "OPTIONS", "PUT"]
    accessControlAllowOrigin: "origin-list-or-null"
    accessControlMaxAge: 100
    #AddVaryHeader: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: true
    #sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    #contentSecurityPolicy: "default-src 'self' 'unsafe-inline' 'unsafe-eval'"
    customFrameOptionsValue: "SAMEORIGIN"
    referrerPolicy: "same-origin"
    featurePolicy: "vibrate 'self'"
    stsSeconds: 315360000
