manifests/base/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin 
  name:  admin
  namespace: notification-canada-ca
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: admin 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - image: admin
          imagePullPolicy: Always
          name: admin 
          resources:
            requests:
              cpu: "60m"
              memory: "350Mi"
            limits:
              cpu: "120m"
              memory: "500Mi"
          ports:
            - containerPort: 6012
          readinessProbe:
            tcpSocket:
              port: 6012
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            tcpSocket:
              port: 6012
            initialDelaySeconds: 3
            periodSeconds: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
