manifests/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api 
  name:  api
  namespace: notification-canada-ca
spec:
  replicas: 6
  selector:
    matchLabels:
      app: api 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: api
          imagePullPolicy: Always
          name: api 
          resources: 
            requests:
              cpu: "500m"
              memory: "700Mi"
            limits:
              cpu: "1200m"
              memory: "900Mi"
          ports:
            - containerPort: 6011
          readinessProbe:
            httpGet:
              path: /
              port: 6011
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 6011
            initialDelaySeconds: 5
            periodSeconds: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
