manifests/base/celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-beat 
  name:  celery-beat
  namespace: notification-canada-ca
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: celery-beat 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
        - image: api
          imagePullPolicy: Always
          name: celery-beat
          command: ["/bin/sh"]
          args: ["-c", "sh /app/scripts/run_celery_beat.sh"]
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
