manifests/base/celery-sms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms 
  name:  celery-sms
  namespace: notification-canada-ca
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: celery-sms 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: celery-sms
    spec:
      containers:
        - image: api
          imagePullPolicy: Always
          name: celery-sms
          command: ["/bin/sh"]
          args: ["-c", "sh /app/scripts/run_celery.sh"]
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "550m"
              memory: "600Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
