manifests/base/document-download-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: document-download-api 
  name:  document-download-api
  namespace: notification-canada-ca
spec:
  selector:
    matchLabels:
      app: document-download-api 
  template:
    metadata:
      labels:
        app: document-download-api
    spec:
      containers:
        - image: document-download-api
          imagePullPolicy: Always
          name: document-download-api 
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
