manifests/base/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
  namespace: notification-canada-ca
  labels:
    app: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      containers:
        - name: graphql-engine
          image: hasura/graphql-engine:v1.0.0-beta.6
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080         
          command:
            - graphql-engine
            - serve
            - --enable-console
