manifests/base/ipv4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipv4
  namespace: notification-canada-ca
  labels:
    app: ipv4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipv4
  template:
    metadata:
      labels:
        app: ipv4
    spec:
      containers:
        - name: ipv4
          image: gcr.io/cdssnc/ipv4-geolocate-webservice
          ports:
            - containerPort: 8080
