manifests/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres 
    name: postgres
  name: postgres 
  namespace: notification-canada-ca
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: postgres 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres 
    spec:
      containers:
        - image: postgres:10.6 
          imagePullPolicy: Always
          name: postgres
          volumeMounts:
            - name: postgres-claim
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-claim 
          persistentVolumeClaim:
            claimName: postgres-claim
status: {}
