manifests/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api
  name: api
  namespace: notification-canada-ca
spec:
  type: NodePort
  ports:
    - port: 6011
      targetPort: 6011
  selector:
    app: api
