manifests/base/document-download-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: document-download-api
  name: document-download-api
  namespace: notification-canada-ca
spec:
  type: NodePort
  ports:
    - port: 7000
      targetPort: 7000
  selector:
    app: document-download-api
