manifests/base/document-download-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: document-download-frontend
  name: document-download-frontend
  namespace: notification-canada-ca
spec:
  type: NodePort
  ports:
    - port: 7001
      targetPort: 7001
  selector:
    app: document-download-frontend
