manifests/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres
  name: postgres
  namespace: notification-canada-ca
spec:
  ports:
    - port: 5432
      name: '5432' 
      targetPort: 5432
  type: ClusterIP
  selector:
    app: postgres
