manifests/base/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: proxy
  name: proxy
  namespace: notification-canada-ca
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: proxy
