manifests/base/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http
  namespace: notification-canada-ca
spec:
  entryPoints:
    - http
  routes:
  - match: HostRegexp(`api.document.{d:.*}`)
    kind: Rule
    priority: 40
    middlewares:
    - name: security-headers
    services:
    - name: document-download-api
      port: 7000
  - match: HostRegexp(`document.{d:.*}`)
    kind: Rule
    priority: 30
    middlewares:
    - name: security-headers
    services:
    - name: document-download-frontend
      port: 7001
  - match: HostRegexp(`api.{d:.*}`)
    kind: Rule
    priority: 20
    middlewares:
    - name: security-headers
    services:
    - name: api
      port: 6011
  - match: HostRegexp(`{d:.*}`)
    kind: Rule
    priority: 10
    middlewares:
    - name: security-headers
    services:
    - name: admin
      port: 6012

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-https
  namespace: notification-canada-ca
spec:
  entryPoints:
    - https
  tls:
    certResolver: default
    options:
      name: default
  routes:
  - match: HostRegexp(`api.document.{d:.*}`)
    kind: Rule
    priority: 40
    middlewares:
    - name: security-headers
    services:
    - name: document-download-api
      port: 7000
  - match: HostRegexp(`document.{d:.*}`)
    kind: Rule
    priority: 30
    middlewares:
    - name: security-headers
    services:
    - name: document-download-frontend
      port: 7001
  - match: HostRegexp(`api.{d:.*}`)
    kind: Rule
    priority: 20
    middlewares:
    - name: security-headers
    services:
    - name: api
      port: 6011
  - match: HostRegexp(`{d:.*}`)
    kind: Rule
    priority: 10
    middlewares:
    - name: security-headers
    services:
    - name: admin
      port: 6012
